--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "projen": "^0.77.6",
     "standard-version": "^9"
   },
+  "dependencies": {
+    "express": "^4.18.2"
+  },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
